# flywheel

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
batteries/claude/: .gitattributes  Dockerfile.arc  Dockerfile.claude  agent_runner.py  arc_mcp_server.py  entrypoint.sh  eval_mcp_server.py  handoff_session.py
batteries/codex/: .gitattributes  Dockerfile.codex  agent_runner.py  codex_handoff_hook.py  entrypoint.sh
batteries/desktop/: Dockerfile.desktop  desktop_server.py  entrypoint.sh
docs/: architecture.md  executors.md  vision.md
docs/cli/: README.md  (+4 more)
flywheel/: __main__.py  agent.py  agent_executor.py  agent_group.py  agent_handoff.py  agent_loop.py  agent_loop_driver.py  artifact.py  artifact_validator.py  bindings.py  block_bridge.py  block_group.py  cli.py  config.py  container.py  execution.py  execution_channel.py  executor.py  input_staging.py  instance_runtime.py  invocation.py  local_block.py  output_builder.py  pattern.py  pattern_declaration.py  pattern_execution.py  pattern_handoff.py  pattern_lanes.py  pattern_params.py  pattern_resolution.py  pattern_runner.py  persistent_runtime.py  post_check.py  project_hooks.py  quarantine.py  run_defaults.py  run_record.py  runtime.py  sequence.py  session_splice.py  (+7 more)
scripts/: verify.sh
tests/: _handoff_helpers.py  _inline_blocks.py  conftest.py  test_agent_canonical.py  test_agent_executor.py  test_agent_group.py  test_agent_handle.py  test_agent_handoff.py  test_agent_handoff_handle.py  test_agent_loop.py  test_agent_loop_driver.py  test_agent_runner_handoff.py  test_arc_mcp_server.py  test_artifact.py  test_artifact_sequences.py  test_artifact_validator.py  test_block_bridge.py  test_block_group.py  test_block_registry.py  test_claude_battery.py  test_cli.py  test_codex_battery.py  test_config.py  test_container.py  test_derived_inputs.py  test_desktop_battery.py  test_examples.py  test_execution.py  test_executor.py  test_executor_output_builder.py  test_executor_process.py  test_executor_record.py  test_exit_reason.py  test_handoff_resume.py  test_import.py  test_input_staging.py  test_lifecycle_api.py  test_local_block.py  test_manifest.py  test_mcp_discovery.py  (+21 more)
(+29 files in other folders)
