[project]
name = "flywheel"
version = "0.1.0"
description = "Orchestration framework for measurable AI improvement loops"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import ordering)
    "UP",     # pyupgrade (Python version idioms)
    "B",      # flake8-bugbear (common pitfalls)
    "SIM",    # flake8-simplify
]
ignore = [
    "SIM108", # ternary operator suggestions (often less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["flywheel"]
